# coherent-rtlsdr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deps  install_on_rpi
beamformclient/: heatmap2d.cpp  heatmap2d2.cpp  svec2d.m  vectorplotdemo.cpp
electronics/: README
examplecfg/: URA21.cfg  ac.cfg  four.cfg
include/: ccoherent.h  cconfigfile.h  ccontrol.h  cdsp.h  common.h  console.h  cpacketize.h  cpacketizer.h  crefnoise.h  csdrdevice.h
matlabclient/: CZMQSDR.m  compiling.txt  matsave.cc  measurement_script.m  noiseswitch.m  notes.m  phasecorrectionplot.m  seqnum_and_correlation.m  testchannels.m  testclient.m  zmqsdr.c  zmqsdr.cc  zmqsdr.mexa64
matlabclient/data/: bform.m
matlabclient/datarockwrefnoise/: bform.m  bform.m~
matlabclient/datasimlab/: bform.m
matlabclient/functions/: D2Dtoepos.m  DA2D.m  darray.m  pmusic.m  pmusicplot.m
refnoisefirmware/: CMakeLists.txt  Makefile  bootloader.c  enter_dfu.sh  fw.c  stm32-blueboot.ld  stm32-bluebootld.ld  stm32-bluepill.ld  stm32-bluepilldfu.ld  usbdfu.c
src/: CMakeLists.txt  ccoherent.cc  ccontrol.cc  cdsp.cc  common.cc  console.cc  cpacketizer.cc  crtlsdr.cc  csdrdevice.cc  main.cc
